lab1/Test/L1-A-6-86.output
Error Type B at Line 4
Error Type B at Line 6
Error Type B at Line 7
Error Type B at Line 10
Error Type A at Line 11
Error Type A at Line 11
