lab1/Test/L1-A-6-86.cmm
float i7B66Gb859tUHe ( ) {
  if ( crGesxoe ( ) = - xbghbA8x_KY92d + NCkvsQc1UzOUb2mZ06 
    - sCYaX072llovkcw2 + B + TSK <= Uxf7gwqvkbZdTveVg 
    <= jq8rC < OT8WUa == J3UH <= != KIHEof8dkvrS68dbb 
    <= ZhGd5 <= ETHJ1 || qDU_uvoUmzRLH0ezqIL )   return 
    ;
else   if upD1MyC3n8AkkG3 )   tWy 


}
$~